--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^0.0.1",
     "ngx-order-pipe": "^2.2.0",
+    "ngx-pagination": "^6.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
